<resources>
    <string name="facebook_app_id">976165716555193</string>
    <string name="fb_login_protocol_scheme">fb976165716555193</string>

    <string name="app_name">TripBuddy</string>
    <string name="home">Home</string>
    <string name="now">Now</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_profile_fragment">Hello profile fragment</string>
    <string name="hello_trips_fragment">Hello trips fragment</string>
    <string name="next_up">Next Up:\nvisiting the statue of liberty</string>
    <string name="add_event">Add Event</string>
    <string name="view_itinerary">View Itinerary</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">snXIjMUOp4bhWmLsiEWX0IYtCuxOLARY4xumpCJA</string>
    <string name="back4app_client_key">gYkCYZ47Pdgln4fdHeOwBaZBZEyxvyn5urVENvZ4</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Log out</string>
    <string name="notes">Notes</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="alr_acc_login">Already have an account? Log in</string>
    <string name="log_in">Log in</string>
    <string name="no_acc_signup">Don\'t have an account? Sign up</string>
    <string name="create_a_new_trip">Create a new trip</string>
    <string name="title_of_trip">Title of Trip*</string>
    <string name="destination_city">Destination City*</string>
    <string name="start_date">Start Date*</string>
    <string name="end_date">End Date*</string>
    <string name="create">Create</string>
    <string name="create_a_new_event">Create a new event</string>
    <string name="title_of_event">Title of Event*</string>
    <string name="event_location">Event Location*</string>
    <string name="start_time">Start Time*</string>
    <string name="end_time">End Time*</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="hidden_password">********</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="undo">Undo</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type title or location...</string>
    <string name="select_dates">Select Dates</string>

</resources>